# canwxlab

./: .env.example  .gitignore  Cargo.toml  PHASE4_IMPLEMENTATION.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.canwxlab/pytest-tmp/: test_alerts_normalized_from_mocurrent  test_cache_returns_cached_paylcurrent  test_discover_malformed_manifecurrent  test_discover_valid_plugin_mancurrent  test_eccc_collections_uses_moccurrent  test_stale_cache_used_after_licurrent  test_stations_normalized_from_current
apps/web/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
crates/canwxsim/: Cargo.toml
crates/canwxsim-cli/: Cargo.toml
data/sample/: canwxsim_sample.json
docs/: architecture.md  basemaps.md  celestial-data-sources.md  cosmic-scope-roadmap.md  data-access-policies.md  data-sources.md  development.md  global-osint-data-sources.md  globe-rendering.md  layer-engine.md  manual-qa.md  neural-frame-interpolation.md  non-weather-osint-layers.md  ogc-api-collections.md  orbital-view-architecture.md  osint-earth-vision.md  plugin-system.md  rendering-rewrite.md  roadmap.md  simulation-engine.md  simulation-workflows.md  stellar-rendering-plan.md  timeline-solar-celestial.md  ui-workbench.md  verification-diff.md  verification.md  wms-live-layers.md
scripts/: check-endpoints.ps1  dev-api.ps1  dev-live.ps1  dev-mock.ps1  dev-sim-sample.ps1  dev-web.ps1  dev.ps1  stop-dev.ps1  validate.ps1
services/api/: README.md  pyproject.toml
services/api/canwxlab_api/: __init__.py  config.py  dependencies.py  frame_interp.py  http_cache.py  interp_raft.py  interp_splat.py  logging_config.py  main.py  models.py  motion_flow.py  plugin_discovery.py  sample_fields.py
services/api/canwxlab_api/adapters/: base.py  composite.py  cosmic_celestrak.py  cosmic_horizons.py  cosmic_sbdb.py  eccc_geomet.py  gibs_wmts.py  mock.py  open_meteo.py  opensky_adsb.py
services/api/canwxlab_api/core/: __init__.py  event_store.py  world_state.py
services/api/canwxlab_api/data/: verified_eccc_ogc_collections.toml  verified_eccc_wms_layers.toml
services/api/canwxlab_api/routes/: aircraft.py  alerts.py  cosmic.py  eccc.py  evidence.py  interp.py  layers.py  motion.py  observations.py  orbits.py  params.py  plugins.py  simulations.py  sources.py  verification.py  weather.py
services/api/tests/: test_api.py  test_celestrak_tle.py  test_event_store.py  test_evidence_routes.py  test_frame_interp.py  test_interp_raft.py  test_interp_routes.py  test_interp_splat.py  test_motion_flow.py  test_ogc_curated.py  test_plugins.py  test_simulation_bridge.py  test_verification_cases.py  test_wms_curated.py
(+188 files in other folders)
