[workspace]
members = [
  "crates/canwxsim",
  "crates/canwxsim-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/your-org/canwxlab"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
