[project]
name = "canwxlab-api"
version = "0.1.0"
description = "FastAPI service for CanWxLab weather data, simulation, and verification APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-json-logger>=2.0,<3.0",
  "aiosqlite>=0.20,<1.0",
  "h3>=4.0,<5.0",
  "numpy>=1.26,<3.0",
  "pillow>=10.0,<12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "respx>=0.21,<1.0",
  "ruff>=0.6,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
