[project]
name = "canwxlab-api"
version = "0.1.0"
description = "FastAPI service for CanWxLab weather data, simulation, and verification APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-json-logger>=2.0,<3.0",
  "aiosqlite>=0.20,<1.0",
  "h3>=4.0,<5.0",
  "numpy>=1.26,<3.0",
  "pillow>=10.0,<12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "respx>=0.21,<1.0",
  "ruff>=0.6,<1.0"
]
# Neural frame interpolation (cloud video): RAFT optical flow (torchvision) +
# forward splat. CPU wheels work out of the box; on a CUDA host install the
# matching CUDA build of torch for GPU acceleration:
#   pip install -e '.[interp]'                                  # CPU
#   pip install torch torchvision --index-url \
#     https://download.pytorch.org/whl/cu124                    # CUDA
# torch is intentionally NOT a base dependency — the service falls back to the
# pure-NumPy Lucas-Kanade splat when this extra is absent.
interp = [
  "torch>=2.2",
  "torchvision>=0.17",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
